// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlet > using "end" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Layout
      </div>
      <div>
        Root/Main: not found
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "index" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Layout
      </div>
      <div>
        Index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "this" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Layout
      </div>
      <div>
        <div>
          Next layout
        </div>
      </div>
    </div>
  </div>
</div>
`;
